--- a/Actividad2.html
+++ b/Actividad2.html
@@ -42,7 +42,7 @@
 
     <main>
         <div class="mobile-container">
-            <!-- <div class="container-card"> -->
+
             <div class="card">
                 <figure>
                     <img src="src/Img/AmgGtrPro.jpg" alt="">
@@ -54,8 +54,8 @@
                         ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa possimus
                         accusamus
                         exercitationem laudantium enim.</p>
-                    <a href="#">Leer Mas</a>
-                </div>
+                    <a href="https://www.mercedes-benz.com.co/" target="_blank">Leer Mas</a>
+                </div>>Leer Mas</a>
             </div>
 
             <div class="card">
@@ -69,7 +69,7 @@
                         ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa possimus
                         accusamus
                         exercitationem laudantium enim.</p>
-                    <a href="#">Leer Mas</a>
+                    <a href="https://www.bmw.com.co/es/index.html" target="_blank">Leer Mas</a>
                 </div>
             </div>
 
@@ -84,7 +84,7 @@
                         ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa possimus
                         accusamus
                         exercitationem laudantium enim.</p>
-                    <a href="#">Leer Mas</a>
+                    <a href="https://www.audi.com.co/" target="_blank">Leer Mas</a>
                 </div>
             </div>
 
@@ -99,7 +99,7 @@
                         ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa possimus
                         accusamus
                         exercitationem laudantium enim.</p>
-                    <a href="#">Leer Mas</a>
+                    <a href="https://www.porsche.com/latin-america-es/" target="_blank">Leer Mas</a>
                 </div>
             </div>
 
@@ -114,7 +114,7 @@
                         ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa possimus
                         accusamus
                         exercitationem laudantium enim.</p>
-                    <a href="#">Leer Mas</a>
+                    <a href="https://autos.honda.com.co/autos-nuevos/automoviles/civic" target="_blank">Leer Mas</a>
                 </div>
             </div>
 
@@ -129,15 +129,16 @@
                         ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa possimus
                         accusamus
                         exercitationem laudantium enim.</p>
-                    <a href="#">Leer Mas</a>
+                    <a href="https://www.subarucolombia.com/hibridos?gclid=CjwKCAiA_6yfBhBNEiwAkmXy534ZD6Exq-lQPDx3EkKkUXrx6Os9FphqVAy_CdUEcxI2fuUj_B1RYhoCF-IQAvD_BwE"
+                        target="_blank">Leer Mas</a>
                 </div>
             </div>
-            <!-- </div> -->
         </div>
 
         <!-- Fila-1 -->
         <section>
             <div class="container-card">
+
                 <div class="card">
                     <figure>
                         <img src="src/Img/AmgGtrPro.jpg" alt="">
@@ -151,7 +152,7 @@
                             possimus
                             accusamus
                             exercitationem laudantium enim.</p>
-                        <a href="#">Leer Mas</a>
+                        <a href="https://www.mercedes-benz.com.co/" target="_blank">Leer Mas</a>
                     </div>
                 </div>
 
@@ -168,7 +169,7 @@
                             possimus
                             accusamus
                             exercitationem laudantium enim.</p>
-                        <a href="#">Leer Mas</a>
+                        <a href="https://www.bmw.com.co/es/index.html" target="_blank">Leer Mas</a>
                     </div>
                 </div>
 
@@ -185,7 +186,7 @@
                             possimus
                             accusamus
                             exercitationem laudantium enim.</p>
-                        <a href="#">Leer Mas</a>
+                        <a href="https://www.audi.com.co/" target="_blank">Leer Mas</a>
                     </div>
                 </div>
             </div>
@@ -194,6 +195,7 @@
         <!-- Fila-2 -->
         <section>
             <div class="container-card">
+
                 <div class="card">
                     <figure>
                         <img src="src/Img/Porche911Gt3Rs.jpg" alt="">
@@ -207,7 +209,7 @@
                             possimus
                             accusamus
                             exercitationem laudantium enim.</p>
-                        <a href="#">Leer Mas</a>
+                        <a href="https://www.porsche.com/latin-america-es/" target="_blank">Leer Mas</a>
                     </div>
                 </div>
 
@@ -224,7 +226,7 @@
                             possimus
                             accusamus
                             exercitationem laudantium enim.</p>
-                        <a href="#">Leer Mas</a>
+                        <a href="https://autos.honda.com.co/autos-nuevos/automoviles/civic" target="_blank">Leer Mas</a>
                     </div>
                 </div>
 
@@ -241,13 +243,22 @@
                             possimus
                             accusamus
                             exercitationem laudantium enim.</p>
-                        <a href="#">Leer Mas</a>
+                        <a href="https://www.subarucolombia.com/hibridos?gclid=CjwKCAiA_6yfBhBNEiwAkmXy534ZD6Exq-lQPDx3EkKkUXrx6Os9FphqVAy_CdUEcxI2fuUj_B1RYhoCF-IQAvD_BwE"
+                            target="_blank">Leer Mas</a>
                     </div>
                 </div>
             </div>
         </section>
-
     </main>
+
+    <footer>
+        <div>
+            <a href="https://www.cuc.edu.co/"><img src="src/Img/LOGO UNICOSTA ALPHA_6.png" alt="Cuc"></a>
+            <b>
+                <P>Luis Eduardo Villa Ojeda</P>
+            </b>
+        </div>
+    </footer>
 </body>
 
 </html>
