--- a/Actividad2.html
+++ b/Actividad2.html
@@ -15,10 +15,14 @@
         <nav>
             <div class="mobile">
                 <div class="header">
-                    <a href="https://www.cuc.edu.co/"><img src="src/Img/LOGO UNICOSTA ALPHA_6.png" alt=""
-                            width="100px"></a>
-                    <a href="#">Autos</a>
+                    <div>
+                        <a href="https://www.cuc.edu.co/" target="_blank"><img src="src/Img/LOGO UNICOSTA ALPHA_6.png"
+                                alt="" width="100px"></a>
 
+                        <a href="#" class="link">Marcas</a>
+                        <a href="#" class="link">Imagenes</a>
+                        <a href="#" class="link">Logos</a>
+                    </div>
                     <div>
                         <a href="#"><span class="material-icons">&#xe88a;</span></a>
                         <a href="#"><span class="material-icons">&#xe0cd;</span></a>
@@ -28,9 +32,11 @@
 
             <!-- Escritorio -->
             <ul>
-                <li><a href="#" class="link">Cuc</a></li>
-                <li><a href="#" class="link link-hide">Marcas</a></li>
-                <li><a href="#" class="link link-hide">Imagenes</a></li>
+                <a href="https://www.cuc.edu.co/" target="_blank" style="margin-top: 15px;"><img
+                        src="src/Img/LOGO UNICOSTA ALPHA_6.png" alt="" width="100px"></a>
+                <li><a href="#" class="link">Marcas</a></li>
+                <li><a href="#" class="link">Imagenes</a></li>
+                <li><a href="#" class="link">Logos</a></li>
             </ul>
 
             <ul>
