--- a/Actividad2.html
+++ b/Actividad2.html
@@ -15,14 +15,17 @@
         <nav>
             <div class="mobile">
                 <div class="header">
+                    <!-- <button id="bmenu">
+                        <span class="material-icons">&#xe5d2;</span>
+                    </button> -->
                     <div>
                         <a href="https://www.cuc.edu.co/" target="_blank"><img src="src/Img/LOGO UNICOSTA ALPHA_6.png"
                                 alt="" width="100px"></a>
-
                         <a href="#" class="link">Marcas</a>
                         <a href="#" class="link">Imagenes</a>
                         <a href="#" class="link">Logos</a>
                     </div>
+
                     <div>
                         <a href="#"><span class="material-icons">&#xe88a;</span></a>
                         <a href="#"><span class="material-icons">&#xe0cd;</span></a>
@@ -30,6 +33,11 @@
                 </div>
             </div>
 
+            <!-- <div class="links">
+                <a href="#" class="link">Marcas</a>
+                <a href="#" class="link">Imagenes</a>
+                <a href="#" class="link">Logos</a>
+            </div> -->
             <!-- Escritorio -->
             <ul>
                 <a href="https://www.cuc.edu.co/" target="_blank" style="margin-top: 15px;"><img
