--- a/Actividad2.html
+++ b/Actividad2.html
@@ -21,9 +21,9 @@
                     <div>
                         <a href="https://www.cuc.edu.co/" target="_blank"><img src="src/Img/LOGO UNICOSTA ALPHA_6.png"
                                 alt="" width="100px"></a>
-                        <a href="#" class="link">Marcas</a>
-                        <a href="#" class="link">Imagenes</a>
-                        <a href="#" class="link">Logos</a>
+                        <!-- <a href="" class="link">Marcas</a> -->
+                        <a href="Imagenes.html" class="link">Imagenes</a>
+                        <a href="Logos.html" class="link">Logos</a>
                     </div>
 
                     <div>
@@ -38,13 +38,14 @@
                 <a href="#" class="link">Imagenes</a>
                 <a href="#" class="link">Logos</a>
             </div> -->
+
             <!-- Escritorio -->
             <ul>
                 <a href="https://www.cuc.edu.co/" target="_blank" style="margin-top: 15px;"><img
                         src="src/Img/LOGO UNICOSTA ALPHA_6.png" alt="" width="100px"></a>
-                <li><a href="#" class="link">Marcas</a></li>
-                <li><a href="#" class="link">Imagenes</a></li>
-                <li><a href="#" class="link">Logos</a></li>
+                <!-- <li><a href="#" class="link">Marcas</a></li> -->
+                <li><a href="Imagenes.html" class="link">Imagenes</a></li>
+                <li><a href="Logos.html" class="link">Logos</a></li>
             </ul>
 
             <ul>
