--- a/Actividad2.html
+++ b/Actividad2.html
@@ -19,7 +19,7 @@
                         <span class="material-icons">&#xe5d2;</span>
                     </button> -->
                     <div>
-                        <a href="https://www.cuc.edu.co/" target="_blank"><img src="src/Img/LOGO UNICOSTA ALPHA_6.png"
+                        <a href="https://www.cuc.edu.co/" target="_blank"><img src="src/Img/Logos/LOGO UNICOSTA ALPHA_6.png"
                                 alt="" width="100px"></a>
                         <!-- <a href="" class="link">Marcas</a> -->
                         <a href="Imagenes.html" class="link">Imagenes</a>
@@ -27,8 +27,8 @@
                     </div>
 
                     <div>
-                        <a href="#"><span class="material-icons">&#xe88a;</span></a>
-                        <a href="#"><span class="material-icons">&#xe0cd;</span></a>
+                        <a href="Actividad2.html"><span class="material-icons">&#xe88a;</span></a>
+                        <a href="Contactos.html"><span class="material-icons">&#xe0cd;</span></a>
                     </div>
                 </div>
             </div>
@@ -42,15 +42,15 @@
             <!-- Escritorio -->
             <ul>
                 <a href="https://www.cuc.edu.co/" target="_blank" style="margin-top: 15px;"><img
-                        src="src/Img/LOGO UNICOSTA ALPHA_6.png" alt="" width="100px"></a>
+                        src="src/Img/Logos/LOGO UNICOSTA ALPHA_6.png" alt="" width="100px"></a>
                 <!-- <li><a href="#" class="link">Marcas</a></li> -->
                 <li><a href="Imagenes.html" class="link">Imagenes</a></li>
                 <li><a href="Logos.html" class="link">Logos</a></li>
             </ul>
 
             <ul>
-                <li><a href="#"><span class="material-icons">&#xe88a;</span></a></li>
-                <li><a href="#"><span class="material-icons">&#xe0cd;</span></a></li>
+                <li><a href="Actividad2.html"><span class="material-icons">&#xe88a;</span></a></li>
+                <li><a href="Contactos.html"><span class="material-icons">&#xe0cd;</span></a></li>
             </ul>
         </nav>
     </header>
@@ -60,7 +60,7 @@
 
             <div class="card">
                 <figure>
-                    <img src="src/Img/AmgGtrPro.jpg" alt="">
+                    <img src="src/Img/Carros/AmgGtrPro.jpg" alt="">
                 </figure>
                 <div class="contenido">
                     <h3>Mercedes Benz: Amg Gtr Pro</h3>
@@ -75,7 +75,7 @@
 
             <div class="card">
                 <figure>
-                    <img src="src/Img/bmwM8.jpeg" alt="">
+                    <img src="src/Img/Carros/bmwM8.jpeg" alt="">
                 </figure>
                 <div class="contenido">
                     <h3>Bmw: M8 Competition</h3>
@@ -90,7 +90,7 @@
 
             <div class="card">
                 <figure>
-                    <img src="src/Img/Audi_e-tron_GT.webp" alt="">
+                    <img src="src/Img/Carros/Audi_e-tron_GT.webp" alt="">
                 </figure>
                 <div class="contenido">
                     <h3>Audi: E-Tron GT</h3>
@@ -105,7 +105,7 @@
 
             <div class="card">
                 <figure>
-                    <img src="src/Img/Porche911Gt3Rs.jpg" alt="">
+                    <img src="src/Img/Carros/Porche911Gt3Rs.jpg" alt="">
                 </figure>
                 <div class="contenido">
                     <h3>Porche 911: Gt3 RS</h3>
@@ -120,7 +120,7 @@
 
             <div class="card">
                 <figure>
-                    <img src="src/Img/HondaCivicTypeR.jpg" alt="">
+                    <img src="src/Img/Carros/HondaCivicTypeR.jpg" alt="">
                 </figure>
                 <div class="contenido">
                     <h3>Honda: Civic Type R</h3>
@@ -135,7 +135,7 @@
 
             <div class="card">
                 <figure>
-                    <img src="src/Img/SubaruBrz.webp" alt="">
+                    <img src="src/Img/Carros/SubaruBrz.webp" alt="">
                 </figure>
                 <div class="contenido">
                     <h3>Subaru: Brz</h3>
@@ -156,7 +156,7 @@
 
                 <div class="card">
                     <figure>
-                        <img src="src/Img/AmgGtrPro.jpg" alt="">
+                        <img src="src/Img/Carros/AmgGtrPro.jpg" alt="">
                     </figure>
                     <div class="contenido">
                         <h3>Mercedes Benz: Amg Gtr Pro</h3>
@@ -173,7 +173,7 @@
 
                 <div class="card">
                     <figure>
-                        <img src="src/Img/bmwM8.jpeg" alt="">
+                        <img src="src/Img/Carros/bmwM8.jpeg" alt="">
                     </figure>
                     <div class="contenido">
                         <h3>Bmw: M8 Competition</h3>
@@ -190,7 +190,7 @@
 
                 <div class="card">
                     <figure>
-                        <img src="src/Img/Audi_e-tron_GT.webp" alt="">
+                        <img src="src/Img/Carros/Audi_e-tron_GT.webp" alt="">
                     </figure>
                     <div class="contenido">
                         <h3>Audi: E-Tron GT</h3>
@@ -213,7 +213,7 @@
 
                 <div class="card">
                     <figure>
-                        <img src="src/Img/Porche911Gt3Rs.jpg" alt="">
+                        <img src="src/Img/Carros/Porche911Gt3Rs.jpg" alt="">
                     </figure>
                     <div class="contenido">
                         <h3>Porche 911: Gt3 RS</h3>
@@ -230,7 +230,7 @@
 
                 <div class="card">
                     <figure>
-                        <img src="src/Img/HondaCivicTypeR.jpg" alt="">
+                        <img src="src/Img/Carros/HondaCivicTypeR.jpg" alt="">
                     </figure>
                     <div class="contenido">
                         <h3>Honda: Civic Type R</h3>
@@ -247,7 +247,7 @@
 
                 <div class="card">
                     <figure>
-                        <img src="src/Img/SubaruBrz.webp" alt="">
+                        <img src="src/Img/Carros/SubaruBrz.webp" alt="">
                     </figure>
                     <div class="contenido">
                         <h3>Subaru: Brz</h3>
@@ -268,7 +268,7 @@
 
     <footer>
         <div>
-            <a href="https://www.cuc.edu.co/"><img src="src/Img/LOGO UNICOSTA ALPHA_6.png" alt="Cuc"></a>
+            <a href="https://www.cuc.edu.co/"><img src="src/Img/Logos/LOGO UNICOSTA ALPHA_6.png" alt="Cuc"></a>
             <b>
                 <P>Luis Eduardo Villa Ojeda</P>
             </b>
