--- a/Contactos.html
+++ b/Contactos.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Logos</title>
+    <title>Document</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="src/css/Actividad2.css">
 </head>
-
 <body>
     <header>
         <nav>
@@ -59,5 +57,4 @@
 
     </main>
 </body>
-
 </html>
