--- a/Logos.html
+++ b/Logos.html
@@ -19,8 +19,8 @@
                         <span class="material-icons">&#xe5d2;</span>
                     </button> -->
                     <div>
-                        <a href="https://www.cuc.edu.co/" target="_blank"><img src="src/Img/Logos/LOGO UNICOSTA ALPHA_6.png"
-                                alt="" width="100px"></a>
+                        <a href="https://www.cuc.edu.co/" target="_blank"><img
+                                src="src/Img/Logos/LOGO UNICOSTA ALPHA_6.png" alt="" width="100px"></a>
                         <!-- <a href="" class="link">Marcas</a> -->
                         <a href="Imagenes.html" class="link">Imagenes</a>
                         <a href="Logos.html" class="link">Logos</a>
@@ -56,7 +56,18 @@
     </header>
 
     <main>
-
+        <a href="https://www.audi.com.co/" target="_blank"> <img src="src/Img/Logos/Audi.png" width="100"
+                alt="LogoAudi"></a>
+        <a href="https://www.bmw.com.co/es/index.html" target="_blank"> <img src="src/Img/Logos/Bmw.png" width="100"
+                alt="LogoBmw"></a>
+        <a href="https://www.mercedes-benz.com.co/" target="_blank"> <img src="src/Img/Logos/MercedesBenz.png"
+                width="100" alt="LogoMercedesBenz"></a>
+        <a href="https://www.porsche.com/latin-america-es/" target="_blank"> <img src="src/Img/Logos/Porche.png"
+                width="80" alt="LogoPorche"></a>
+        <a href="https://www.subarucolombia.com/hibridos?gclid=CjwKCAiA_6yfBhBNEiwAkmXy534ZD6Exq-lQPDx3EkKkUXrx6Os9FphqVAy_CdUEcxI2fuUj_B1RYhoCF-IQAvD_BwE"
+            target="_blank"><img src="src/Img/Logos/Subaru.png" width="150" alt="LogoSubaru"></a>
+        <a href="https://autos.honda.com.co/autos-nuevos/automoviles/civic" target="_blank"><img
+                src="src/Img/Logos/Honda.png" width="120" alt="LogoHonda"></a>
     </main>
 </body>
 
