--- a/Imagenes.html
+++ b/Imagenes.html
@@ -8,18 +8,6 @@
     <title>Imagenes</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="src/css/Actividad2.css">
-    
-    <style>
-        body {
-            background-color: black;
-        }
-
-        main {
-            display: flex;
-            text-align: center;
-            justify-content: center;
-        }
-    </style>
 </head>
 
 <body>
@@ -31,8 +19,8 @@
                         <span class="material-icons">&#xe5d2;</span>
                     </button> -->
                     <div>
-                        <a href="https://www.cuc.edu.co/" target="_blank"><img src="src/Img/Logos/LOGO UNICOSTA ALPHA_6.png"
-                                alt="" width="100px"></a>
+                        <a href="https://www.cuc.edu.co/" target="_blank"><img
+                                src="src/Img/Logos/LOGO UNICOSTA ALPHA_6.png" alt="" width="100px"></a>
                         <!-- <a href="" class="link">Marcas</a> -->
                         <a href="Imagenes.html" class="link">Imagenes</a>
                         <a href="Logos.html" class="link">Logos</a>
@@ -66,13 +54,17 @@
             </ul>
         </nav>
     </header>
-    
-    <main>
-        <img src="src/Img/Carros/bmwM8.jpeg" width="300" alt="bmwM8">
-        <img src="src/Img/Carros/AmgGtrPro.jpg" width="300" alt="AmgGtrPro">
-        <img src="src/Img/Carros/Audi_e-tron_GT.webp" width="300" alt="Audi_e-tron_GT">
-        <img src="src/Img/Carros/Porche911Gt3Rs.jpg" width="300" alt="Porche911Gt3Rs">
-        <img src="src/Img/Carros/SubaruBrz.webp" width="300" alt="SubaruBrz">
-        <img src="src/Img/Carros/HondaCivicTypeR.jpg" width="300" alt="HondaCivicTypeR">
+
+    <main class="Img">
+        <!-- <div> -->
+            <img src="src/Img/Carros/AmgGtrPro.jpg" width="300" alt="AmgGtrPro">
+            <img src="src/Img/Carros/bmwM8.jpeg" width="300" alt="bmwM8">
+            <img src="src/Img/Carros/Audi_e-tron_GT.webp" width="300" alt="Audi_e-tron_GT">
+        <!-- </div>
+        <div> -->
+            <img src="src/Img/Carros/Porche911Gt3Rs.jpg" width="300" alt="Porche911Gt3Rs">
+            <img src="src/Img/Carros/HondaCivicTypeR.jpg" width="300" alt="HondaCivicTypeR">
+            <img src="src/Img/Carros/SubaruBrz.webp" width="300" alt="SubaruBrz">
+        <!-- </div> -->
     </main>
 </body>
