--- a/Logos.html
+++ b/Logos.html
@@ -56,23 +56,22 @@
     </header>
 
     <main class="Logos">
-        <div>
+        <!-- <div> -->
             <a href="https://www.mercedes-benz.com.co/" target="_blank"> <img src="src/Img/Logos/MercedesBenz.png"
                     width="100" alt="LogoMercedesBenz"></a>
             <a href="https://www.bmw.com.co/es/index.html" target="_blank"> <img src="src/Img/Logos/Bmw.png" width="100"
                     alt="LogoBmw"></a>
             <a href="https://www.audi.com.co/" target="_blank"> <img src="src/Img/Logos/Audi.png" width="100"
                     alt="LogoAudi"></a>
-        </div>
-        
-        <div>
+        <!-- </div>
+        <div> -->
             <a href="https://www.porsche.com/latin-america-es/" target="_blank"> <img src="src/Img/Logos/Porche.png"
                     width="80" alt="LogoPorche"></a>
             <a href="https://www.subarucolombia.com/hibridos?gclid=CjwKCAiA_6yfBhBNEiwAkmXy534ZD6Exq-lQPDx3EkKkUXrx6Os9FphqVAy_CdUEcxI2fuUj_B1RYhoCF-IQAvD_BwE"
                 target="_blank"><img src="src/Img/Logos/Subaru.png" width="150" alt="LogoSubaru"></a>
             <a href="https://autos.honda.com.co/autos-nuevos/automoviles/civic" target="_blank"><img
                     src="src/Img/Logos/Honda.png" width="120" alt="LogoHonda"></a>
-        </div>
+        <!-- </div> -->
     </main>
 </body>
 
