--- a/Actividad2.html
+++ b/Actividad2.html
@@ -19,8 +19,8 @@
                         <span class="material-icons">&#xe5d2;</span>
                     </button> -->
                     <div>
-                        <a href="https://www.cuc.edu.co/" target="_blank"><img src="src/Img/Logos/LOGO UNICOSTA ALPHA_6.png"
-                                alt="" width="100px"></a>
+                        <a href="https://www.cuc.edu.co/" target="_blank"><img
+                                src="src/Img/Logos/LOGO UNICOSTA ALPHA_6.png" alt="" width="100px"></a>
                         <!-- <a href="" class="link">Marcas</a> -->
                         <a href="Imagenes.html" class="link">Imagenes</a>
                         <a href="Logos.html" class="link">Logos</a>
@@ -265,10 +265,18 @@
             </div>
         </section>
     </main>
-
+<hr>
     <footer>
         <div>
-            <a href="https://www.cuc.edu.co/"><img src="src/Img/Logos/LOGO UNICOSTA ALPHA_6.png" alt="Cuc"></a>
+            <ul>
+                <a href="#"><img src="src/Img/Logos/Instagram.png" alt="">Instagram</a><br>
+                <a href="#"><img src="src/Img/Logos/Facebook.png" alt="">Facebook</a><br>
+                <a href="#"><img src="src/Img/Logos/Twitter.png" alt="">Twitter</a><br>
+                <a href="#"><img src="src/Img/Logos/Gmail.png" alt="">autospremium@gmail.com</a>
+            </ul>
+        </div>
+        <div>
+            <a href="https://www.cuc.edu.co/"><img src="src/Img/Logos/LOGO UNICOSTA ALPHA_6.png" width= "200px" alt="Cuc"></a>
             <b>
                 <P>Luis Eduardo Villa Ojeda</P>
             </b>
