--- a/Actividad2.html
+++ b/Actividad2.html
@@ -280,7 +280,7 @@
             <b>
                 <P>Luis Eduardo Villa Ojeda</P>
             </b>
-            <a href="#"><img src="src/Img/Logos/Gmail.png"  width="30px" style="margin-right: 10px;" alt="">luisvilla@gmail.com</a>
+            <!-- <a href="#"><img src="src/Img/Logos/Gmail.png"  width="30px" style="margin-right: 10px;" alt="">luisvilla@gmail.com</a> -->
 
         </div>
     </footer>
