--- a/Contactos.html
+++ b/Contactos.html
@@ -56,5 +56,24 @@
     <main>
 
     </main>
+
+    <!-- <footer>
+        <div>
+            <ul>
+                <a href="#"><img src="src/Img/Logos/Instagram.png" alt="">Instagram</a><br>
+                <a href="#"><img src="src/Img/Logos/Facebook.png" alt="">Facebook</a><br>
+                <a href="#"><img src="src/Img/Logos/Twitter.png" alt="">Twitter</a><br>
+                <a href="#"><img src="src/Img/Logos/Gmail.png" alt="">autospremium@gmail.com</a>
+            </ul>
+        </div>
+        <div>
+            <a href="https://www.cuc.edu.co/"><img src="src/Img/Logos/LOGO UNICOSTA ALPHA_6.png" width= "200px" alt="Cuc"></a>
+            <b>
+                <P>Luis Eduardo Villa Ojeda</P>
+            </b>
+            <!-- <a href="#"><img src="src/Img/Logos/Gmail.png"  width="30px" style="margin-right: 10px;" alt="">luisvilla@gmail.com</a> -->
+
+        </div>
+    </footer> -->
 </body>
 </html>
