--- a/Actividad2.html
+++ b/Actividad2.html
@@ -265,7 +265,7 @@
             </div>
         </section>
     </main>
-<hr>
+    <hr>
     <footer>
         <div>
             <ul>
@@ -276,7 +276,8 @@
             </ul>
         </div>
         <div>
-            <a href="https://www.cuc.edu.co/"><img src="src/Img/Logos/LOGO UNICOSTA ALPHA_6.png" width= "200px" alt="Cuc"></a>
+            <a href="https://www.cuc.edu.co/"><img src="src/Img/Logos/LOGO UNICOSTA ALPHA_6.png" width="200px"
+                    alt="Cuc"></a>
             <b>
                 <P>Luis Eduardo Villa Ojeda</P>
             </b>
