--- a/Contactos.html
+++ b/Contactos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="src/css/Actividad2.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -17,8 +19,8 @@
                         <span class="material-icons">&#xe5d2;</span>
                     </button> -->
                     <div>
-                        <a href="https://www.cuc.edu.co/" target="_blank"><img src="src/Img/Logos/LOGO UNICOSTA ALPHA_6.png"
-                                alt="" width="100px"></a>
+                        <a href="https://www.cuc.edu.co/" target="_blank"><img
+                                src="src/Img/Logos/LOGO UNICOSTA ALPHA_6.png" alt="" width="100px"></a>
                         <!-- <a href="" class="link">Marcas</a> -->
                         <a href="Imagenes.html" class="link">Imagenes</a>
                         <a href="Logos.html" class="link">Logos</a>
@@ -56,7 +58,7 @@
     <main>
 
     </main>
-
+    <!-- <hr> -->
     <!-- <footer>
         <div>
             <ul>
@@ -73,7 +75,8 @@
             </b>
             <!-- <a href="#"><img src="src/Img/Logos/Gmail.png"  width="30px" style="margin-right: 10px;" alt="">luisvilla@gmail.com</a> -->
 
-        </div>
+    </div>
     </footer> -->
 </body>
+
 </html>
