--- a/Imagenes.html
+++ b/Imagenes.html
@@ -57,17 +57,17 @@
 
     <main class="Img">
         <!-- <div> -->
-            <img src="src/Img/Carros/AmgGtrPro.jpg" width="300" alt="AmgGtrPro">
-            <img src="src/Img/Carros/bmwM8.jpeg" width="300" alt="bmwM8">
-            <img src="src/Img/Carros/Audi_e-tron_GT.webp" width="300" alt="Audi_e-tron_GT">
+        <img src="src/Img/Carros/AmgGtrPro.jpg" width="300" alt="AmgGtrPro">
+        <img src="src/Img/Carros/bmwM8.jpeg" width="300" alt="bmwM8">
+        <img src="src/Img/Carros/Audi_e-tron_GT.webp" width="300" alt="Audi_e-tron_GT">
         <!-- </div>
         <div> -->
-            <img src="src/Img/Carros/Porche911Gt3Rs.jpg" width="300" alt="Porche911Gt3Rs">
-            <img src="src/Img/Carros/HondaCivicTypeR.jpg" width="300" alt="HondaCivicTypeR">
-            <img src="src/Img/Carros/SubaruBrz.webp" width="300" alt="SubaruBrz">
+        <img src="src/Img/Carros/Porche911Gt3Rs.jpg" width="300" alt="Porche911Gt3Rs">
+        <img src="src/Img/Carros/HondaCivicTypeR.jpg" width="300" alt="HondaCivicTypeR">
+        <img src="src/Img/Carros/SubaruBrz.webp" width="300" alt="SubaruBrz">
         <!-- </div> -->
     </main>
-
+    <hr>
     <footer>
         <div>
             <ul>
@@ -78,7 +78,8 @@
             </ul>
         </div>
         <div>
-            <a href="https://www.cuc.edu.co/"><img src="src/Img/Logos/LOGO UNICOSTA ALPHA_6.png" width= "200px" alt="Cuc"></a>
+            <a href="https://www.cuc.edu.co/"><img src="src/Img/Logos/LOGO UNICOSTA ALPHA_6.png" width="200px"
+                    alt="Cuc"></a>
             <b>
                 <P>Luis Eduardo Villa Ojeda</P>
             </b>
