--- a/Logos.html
+++ b/Logos.html
@@ -57,23 +57,23 @@
 
     <main class="Logos">
         <!-- <div> -->
-            <a href="https://www.mercedes-benz.com.co/" target="_blank"> <img src="src/Img/Logos/MercedesBenz.png"
-                    width="100" alt="LogoMercedesBenz"></a>
-            <a href="https://www.bmw.com.co/es/index.html" target="_blank"> <img src="src/Img/Logos/Bmw.png" width="100"
-                    alt="LogoBmw"></a>
-            <a href="https://www.audi.com.co/" target="_blank"> <img src="src/Img/Logos/Audi.png" width="100"
-                    alt="LogoAudi"></a>
+        <a href="https://www.mercedes-benz.com.co/" target="_blank"> <img src="src/Img/Logos/MercedesBenz.png"
+                width="100" alt="LogoMercedesBenz"></a>
+        <a href="https://www.bmw.com.co/es/index.html" target="_blank"> <img src="src/Img/Logos/Bmw.png" width="100"
+                alt="LogoBmw"></a>
+        <a href="https://www.audi.com.co/" target="_blank"> <img src="src/Img/Logos/Audi.png" width="100"
+                alt="LogoAudi"></a>
         <!-- </div>
         <div> -->
-            <a href="https://www.porsche.com/latin-america-es/" target="_blank"> <img src="src/Img/Logos/Porche.png"
-                    width="80" alt="LogoPorche"></a>
-            <a href="https://www.subarucolombia.com/hibridos?gclid=CjwKCAiA_6yfBhBNEiwAkmXy534ZD6Exq-lQPDx3EkKkUXrx6Os9FphqVAy_CdUEcxI2fuUj_B1RYhoCF-IQAvD_BwE"
-                target="_blank"><img src="src/Img/Logos/Subaru.png" width="150" alt="LogoSubaru"></a>
-            <a href="https://autos.honda.com.co/autos-nuevos/automoviles/civic" target="_blank"><img
-                    src="src/Img/Logos/Honda.png" width="120" alt="LogoHonda"></a>
+        <a href="https://www.porsche.com/latin-america-es/" target="_blank"> <img src="src/Img/Logos/Porche.png"
+                width="80" alt="LogoPorche"></a>
+        <a href="https://www.subarucolombia.com/hibridos?gclid=CjwKCAiA_6yfBhBNEiwAkmXy534ZD6Exq-lQPDx3EkKkUXrx6Os9FphqVAy_CdUEcxI2fuUj_B1RYhoCF-IQAvD_BwE"
+            target="_blank"><img src="src/Img/Logos/Subaru.png" width="150" alt="LogoSubaru"></a>
+        <a href="https://autos.honda.com.co/autos-nuevos/automoviles/civic" target="_blank"><img
+                src="src/Img/Logos/Honda.png" width="120" alt="LogoHonda"></a>
         <!-- </div> -->
     </main>
-
+    <hr>
     <footer>
         <div>
             <ul>
@@ -84,7 +84,8 @@
             </ul>
         </div>
         <div>
-            <a href="https://www.cuc.edu.co/"><img src="src/Img/Logos/LOGO UNICOSTA ALPHA_6.png" width= "200px" alt="Cuc"></a>
+            <a href="https://www.cuc.edu.co/"><img src="src/Img/Logos/LOGO UNICOSTA ALPHA_6.png" width="200px"
+                    alt="Cuc"></a>
             <b>
                 <P>Luis Eduardo Villa Ojeda</P>
             </b>
