--- a/Contactos.html
+++ b/Contactos.html
@@ -55,11 +55,44 @@
         </nav>
     </header>
 
-    <main>
+    <main class="formulario">
+        <p>Nombre:
+            <input type="text" name="nombre" size="40" placeholder="Escriba su nombre">
+        </p>
+
+        <p>Apellidos:
+            <input type="text" name="apellidos" size="40" placeholder="Escriba sus dos apellidos">
+        </p>
+
+        <p>Escriba numero telefonico:
+            <input type="number" name="numero" size="10">
+        </p>
+
+        <p>Fecha de nacimiento:
+            <input type="date" name="Fecha">
+        </p>
+
+        <p>Sexo:
+            <input type="radio" name="Sexo" value="Hombre" required> Hombre
+            <input type="radio" name="Sexo" value="Mujer" required> Mujer
+        </p>
+
+        <p>Cuadro de dialogo:
+            <br>
+            <textarea name="texto" rows="4" cols="40"
+                placeholder="Escriba el motivo por el cual se contacta con nosostros"></textarea>
+        </p>
+
+        <p>Clave:
+            <input type="password" size="15" maxlength="10" style="margin-left: 20px;" />
+            <input type="button" name="boton_enviar" value="enviar" />
+        </p>
+
+        <input type="button" name="boton_enviar" value="Enviar" style="background-color:white" />
 
     </main>
-    <!-- <hr> -->
-    <!-- <footer>
+    <hr>
+    <footer>
         <div>
             <ul>
                 <a href="#"><img src="src/Img/Logos/Instagram.png" alt="">Instagram</a><br>
@@ -69,14 +102,16 @@
             </ul>
         </div>
         <div>
-            <a href="https://www.cuc.edu.co/"><img src="src/Img/Logos/LOGO UNICOSTA ALPHA_6.png" width= "200px" alt="Cuc"></a>
+            <a href="https://www.cuc.edu.co/"><img src="src/Img/Logos/LOGO UNICOSTA ALPHA_6.png" width="200px"
+                    alt="Cuc"></a>
             <b>
                 <P>Luis Eduardo Villa Ojeda</P>
             </b>
-            <a href="#"><img src="src/Img/Logos/Gmail.png"  width="30px" style="margin-right: 10px;" alt="">luisvilla@gmail.com</a> -->
+            <a href="#"><img src="src/Img/Logos/Gmail.png" width="30px" style="margin-right: 10px;"
+                    alt="">luisvilla@gmail.com</a>
 
-    </div>
-    </footer> -->
+        </div>
+    </footer>
 </body>
 
 </html>
