--- a/Imagenes.html
+++ b/Imagenes.html
@@ -15,13 +15,9 @@
         <nav>
             <div class="mobile">
                 <div class="header">
-                    <!-- <button id="bmenu">
-                        <span class="material-icons">&#xe5d2;</span>
-                    </button> -->
                     <div>
                         <a href="https://www.cuc.edu.co/" target="_blank"><img
                                 src="src/Img/Logos/LOGO UNICOSTA ALPHA_6.png" alt="" width="100px"></a>
-                        <!-- <a href="" class="link">Marcas</a> -->
                         <a href="Imagenes.html" class="link">Imagenes</a>
                         <a href="Logos.html" class="link">Logos</a>
                     </div>
@@ -33,17 +29,10 @@
                 </div>
             </div>
 
-            <!-- <div class="links">
-                <a href="#" class="link">Marcas</a>
-                <a href="#" class="link">Imagenes</a>
-                <a href="#" class="link">Logos</a>
-            </div> -->
-
             <!-- Escritorio -->
             <ul>
                 <a href="https://www.cuc.edu.co/" target="_blank" style="margin-top: 15px;"><img
                         src="src/Img/Logos/LOGO UNICOSTA ALPHA_6.png" alt="" width="100px"></a>
-                <!-- <li><a href="#" class="link">Marcas</a></li> -->
                 <li><a href="Imagenes.html" class="link">Imagenes</a></li>
                 <li><a href="Logos.html" class="link">Logos</a></li>
             </ul>
@@ -55,17 +44,13 @@
         </nav>
     </header>
 
-    <main class="Img">
-        <!-- <div> -->
+    <main>
         <img src="src/Img/Carros/AmgGtrPro.jpg" width="300" alt="AmgGtrPro">
         <img src="src/Img/Carros/bmwM8.jpeg" width="300" alt="bmwM8">
         <img src="src/Img/Carros/Audi_e-tron_GT.webp" width="300" alt="Audi_e-tron_GT">
-        <!-- </div>
-        <div> -->
         <img src="src/Img/Carros/Porche911Gt3Rs.jpg" width="300" alt="Porche911Gt3Rs">
         <img src="src/Img/Carros/HondaCivicTypeR.jpg" width="300" alt="HondaCivicTypeR">
         <img src="src/Img/Carros/SubaruBrz.webp" width="300" alt="SubaruBrz">
-        <!-- </div> -->
     </main>
     <hr>
     <footer>
@@ -83,8 +68,6 @@
             <b>
                 <P>Luis Eduardo Villa Ojeda</P>
             </b>
-            <!-- <a href="#"><img src="src/Img/Logos/Gmail.png"  width="30px" style="margin-right: 10px;" alt="">luisvilla@gmail.com</a> -->
-
         </div>
     </footer>
 </body>
