--- a/Logos.html
+++ b/Logos.html
@@ -15,9 +15,13 @@
         <nav>
             <div class="mobile">
                 <div class="header">
+                    <!-- <button id="bmenu">
+                        <span class="material-icons">&#xe5d2;</span>
+                    </button> -->
                     <div>
                         <a href="https://www.cuc.edu.co/" target="_blank"><img
                                 src="src/Img/Logos/LOGO UNICOSTA ALPHA_6.png" alt="" width="100px"></a>
+                        <!-- <a href="" class="link">Marcas</a> -->
                         <a href="Imagenes.html" class="link">Imagenes</a>
                         <a href="Logos.html" class="link">Logos</a>
                     </div>
@@ -29,10 +33,17 @@
                 </div>
             </div>
 
+            <!-- <div class="links">
+                <a href="#" class="link">Marcas</a>
+                <a href="#" class="link">Imagenes</a>
+                <a href="#" class="link">Logos</a>
+            </div> -->
+
             <!-- Escritorio -->
             <ul>
                 <a href="https://www.cuc.edu.co/" target="_blank" style="margin-top: 15px;"><img
                         src="src/Img/Logos/LOGO UNICOSTA ALPHA_6.png" alt="" width="100px"></a>
+                <!-- <li><a href="#" class="link">Marcas</a></li> -->
                 <li><a href="Imagenes.html" class="link">Imagenes</a></li>
                 <li><a href="Logos.html" class="link">Logos</a></li>
             </ul>
@@ -74,6 +85,7 @@
             <b>
                 <P>Luis Eduardo Villa Ojeda</P>
             </b>
+            <!-- <a href="#"><img src="src/Img/Logos/Gmail.png"  width="30px" style="margin-right: 10px;" alt="">luisvilla@gmail.com</a> -->
         </div>
     </footer>
 </body>
